--- a/build.properties
+++ b/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                OSGi-INF/CrusherModelFactory.xml,\
                OSGi-INF/CrusherProcessFactory.xml,\
                OSGi-INF/CrusherEventHandler.xml,\
-               OSGi-INF/CrusherCalloutFactory.xml
+               OSGi-INF/CrusherCalloutFactory.xml,\
+               OSGi-INF/NotificationEventHandler.xml,\
+               lib/
 source.. = src/
